--- a/gestion/views/clientes.html
+++ b/gestion/views/clientes.html
@@ -1,5 +1,5 @@
 <h2>Gestión de Clientes</h2>
-<button onclick="mostrarFormularioCliente()">➕ Agregar Cliente</button>
+<button onclick="agregarCliente()">➕ Agregar Cliente</button>
 
 <table>
     <thead>
@@ -12,8 +12,6 @@
         </tr>
     </thead>
     <tbody id="tabla-clientes">
-        <tr><td colspan="5">Cargando clientes...</td></tr>
+        <tr><td colspan="5">Cargando...</td></tr>
     </tbody>
 </table>
-
-<script src="js/clientes.js"></script>
