--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,7 @@ footer p {
 li {
     margin-bottom: 4px;
 }
+ul {
+    list-style: none; /* Elimina los puntos */
+    padding-left: 0; /* Asegura alineación correcta */
+}
