--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,16 @@ a:hover {
     color: #007bff; 
     text-decoration: underline;
 }
-
+h4 {
+    margin-bottom: 5px; /* Reduce el espacio entre el título y la lista */
+}
+/* Listas */
+li {
+    margin-bottom: 4px;
+}
+ul {
+    list-style: none; /* Elimina los puntos */
+    padding-left: 0; /* Asegura alineación correcta */
 /* Footer */
 footer {
     text-align: center;
@@ -47,11 +56,4 @@ footer p {
     margin: 5px 0;
 }
 
-/* Listas */
-li {
-    margin-bottom: 4px;
-}
-ul {
-    list-style: none; /* Elimina los puntos */
-    padding-left: 0; /* Asegura alineación correcta */
 }
