--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,12 @@ ul {
     list-style: none; /* Elimina los puntos */
     padding-left: 0;
     margin-top: 0;
+}   
+ul li::before {
+    content: "✔ ";
+    color: #7d00ff; /* Cambia el color solo del ✔ */
+}
+
     
 /* Footer */
 footer {
