--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ ul {
     padding-left: 0;
     margin-top: 0;
 }   
+ul li::before {
+    content: none !important; /* Elimina cualquier símbolo agregado desde CSS */
+}
     
 /* Footer */
 footer {
