--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ footer {
     background-color: #f8f8f8;
     font-size: 14px;
     color: #333;
+    margin-top: auto; /* Empuja el footer hacia abajo si hay espacio vacío */
 }
 footer > div {
     max-width: 1900px; /* O el valor que prefieras */
