--- a/styles.css
+++ b/styles.css
@@ -96,4 +96,8 @@ footer p {
 .footer-links a:hover {
     color: #007bff;
 }
-
+nav {
+    margin-bottom: 0;
+    display: flex;
+    max-width: 1900px;
+}
