--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,8 @@ footer p {
     color: #007bff;
 }
 nav {
+    width: 100%;
+    max-width: 100%;
     margin-bottom: 0;
     display: flex;
     max-width: 1900px;
