--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@ footer img:hover {
 /* --- MENÚ DENTRO DEL FOOTER --- */
 .footer-nav {
     width: 100%;
-    background-color: #333; /* Fondo oscuro */
+    max-width: 100%;
+    background-color: #000044; /* Fondo oscuro */
     padding: 10px 0; /* Espaciado arriba y abajo */
 }
 
