--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ footer img:hover {
 /* Estilos base del menú */
 nav {
     width: 100%;
-    background-color: #0022BB; /* Azul oscuro del logo */
+    background-color: #000044; /* Azul oscuro del logo */
     padding: 10px 0;
     display: flex;
     justify-content: center;
