--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ footer {
     text-align: center;
     padding: 20px;
     margin-top: 0px;
+    padding-top: 0;
     background-color: #f8f8f8;
     font-size: 14px;
     color: #333;
@@ -56,6 +57,8 @@ footer img:hover {
 nav {
     width: 100%;
     background-color: #000044; /* Azul oscuro del logo */
+    margin-bottom: -1px; /* Ajuste fino para eliminar separación no deseada */
+    padding-bottom: 10px; /* Espacio interno si es necesario */
     padding: 10px 0;
     display: flex;
     justify-content: center;
