--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ nav {
     padding: 10px 0;
     display: flex;
     justify-content: center;
+    text-align: center; /* Asegura que esté centrado */
+
 }
 
 .nav-links {
