--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ footer img:hover {
 /* Estilos base del menú */
 nav {
     width: 100%;
-    background-color: #777777; /* Azul oscuro del logo */
+    background-color: ##004960;
     margin-bottom: -1px; /* Ajuste fino para eliminar separación no deseada */
     padding-bottom: 10px; /* Espacio interno si es necesario */
     padding: 10px 0;
