--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ footer {
     box-sizing: border-box; /* Asegura que el padding no aumente el tamaño */
     text-align: center;
     padding: 20px;
-    margin-top: 0px;
+    margin-top: 0;
     padding-top: 0;
     background-color: #f8f8f8;
     font-size: 14px;
@@ -57,7 +57,7 @@ footer img:hover {
 nav {
     width: 100%;
     background-color: #004960;
-    margin-bottom: -1px; /* Ajuste fino para eliminar separación no deseada */
+    margin-bottom: 0px; /* Ajuste fino para eliminar separación no deseada */
     padding-bottom: 10px; /* Espacio interno si es necesario */
     padding: 10px 0;
     display: flex;
