--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ nav {
 form {
     max-width: 550px; /* Se ajusta a un ancho máximo en pantallas grandes */
     width: 100%; /* Ocupa todo el ancho disponible en móviles */
-    margin: 0 auto;
+    margin: 0;
     padding: 20px;
     box-sizing: border-box;
     display: block;
